# datasette-comments

./: .gitignore  Justfile  NOTES  PLAN-comments.md  README.md  TODO.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_comments/: __init__.py  actions.py  comment_parser.py  contract.py  hookspecs.py  internal_database.py  internal_db.py  internal_migrations.py  manifest.json  page_data.py  router.py  routes.py  schema.sql
datasette_comments/frontend/: api.ts  icons.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
datasette_comments/frontend/components/: Duration.tsx  Thread.css  Thread.tsx
datasette_comments/frontend/src/components/: Duration.tsx  Thread.css  Thread.tsx
datasette_comments/frontend/src/content_script/: index.tsx  row_view.tsx  table_view.tsx
datasette_comments/frontend/src/lib/: api.ts  client.ts  page_data.ts  state.ts
datasette_comments/frontend/src/page_data/: ActivitySearchResponse.types.ts  ActivitySearchResponse_schema.json  Author.types.ts  Author_schema.json  AutocompleteMentionsResponse.types.ts  AutocompleteMentionsResponse_schema.json  CommentAddRequest.types.ts  CommentAddRequest_schema.json  CommentData.types.ts  CommentData_schema.json  ContentScriptPageData.types.ts  ContentScriptPageData_schema.json  OkResponse.types.ts  OkResponse_schema.json  ReactionRequest.types.ts  ReactionRequest_schema.json  RowViewThreadsRequest.types.ts  RowViewThreadsRequest_schema.json  RowViewThreadsResponse.types.ts  RowViewThreadsResponse_schema.json  TableViewThreadsRequest.types.ts  TableViewThreadsRequest_schema.json  TableViewThreadsResponse.types.ts  TableViewThreadsResponse_schema.json  ThreadCommentsResponse.types.ts  ThreadCommentsResponse_schema.json  ThreadMarkResolvedRequest.types.ts  ThreadMarkResolvedRequest_schema.json  ThreadNewRequest.types.ts  ThreadNewRequest_schema.json  ThreadNewResponse.types.ts  ThreadNewResponse_schema.json
datasette_comments/frontend/src/pages/activity/: activity_view.css  index.tsx
datasette_comments/frontend/src/pages/profile_section/: index.tsx
datasette_comments/frontend/targets/: activity_view.css  activity_view.tsx  content_script.tsx  debug.tsx  tag_view.tsx
datasette_comments/frontend/targets/activity_view/: activity_view.css  index.tsx
datasette_comments/frontend/targets/content_script/: index.tsx  row_view.tsx  table_view.tsx
datasette_comments/routes/: api.py  pages.py
datasette_comments/static/: activity_view.min.css  activity_view.min.js  content_script.min.css  content_script.min.js  debug.min.js  style.css  tag_view.min.js
datasette_comments/static/activity_view/: index.min.css  index.min.js
datasette_comments/static/content_script/: index.min.css  index.min.js
datasette_comments/templates/: activity_view.html  debug.html  tag_view.html
demo/: Dockerfile  README.md  deploy.sh  fly.toml
dev/: dev_plugin.py
examples/: dev_plugin.py
scripts/: typegen-pagedata.py
tests/: comments-fixtures.sql  comments-internal-fixtures.sql  conftest.py  test_activity_search.py  test_comment_parser.py  test_comments.py  test_contract.py  test_routes.py  test_ui.py
tests/basic_plugin/: init.sql  metadata.yaml  plugin.py
tests/basic_plugin/static/: widget.js
