[project]
name = "datasette-comments"
version = "0.1.1.a2"
requires-python = ">=3.10"
description = "A Datasette plugin for commenting on tables, rows, and values"
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  #"datasette>=1.0a20", 
  "datasette @ git+https://github.com/simonw/datasette.git@b212895b9763068599e535fd7cd77fd5b8e2b14c",
  "pydantic>2.0,<3.0",
  "sqlite-utils", "python-ulid", "sqlite-migrate==0.1b0"]

[project.urls]
Homepage = "https://github.com/datasette/datasette-comments"
Changelog = "https://github.com/datasette/datasette-comments/releases"
Issues = "https://github.com/datasette/datasette-comments/issues"
CI = "https://github.com/datasette/datasette-comments/actions"


[project.entry-points.datasette]
comments = "datasette_comments"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-playwright", "syrupy"]

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
datasette_comments = ["static/**", "templates/*.html", "*.sql"]
