[project]
name = "datasette-comments"
version = "0.1.1.a3"
description = "A Datasette plugin for commenting on tables, rows, and values"
readme = "README.md"
authors = [{name = "Alex Garcia"}]
dependencies = ["datasette>=1.0a21", "python-ulid", "sqlite-migrate==0.1b0"]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-comments"
Changelog = "https://github.com/datasette/datasette-comments/releases"
Issues = "https://github.com/datasette/datasette-comments/issues"
CI = "https://github.com/datasette/datasette-comments/actions"


[project.entry-points.datasette]
comments = "datasette_comments"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-playwright", "syrupy"]

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
datasette_comments = ["static/**", "templates/*.html", "*.sql"]
